# mtrx3760_2024

LabExampleSolutions/Lab1/: A1.LogicSim.v0.cpp  A1.LogicSim.v0.examplesolution.cpp  A1.LogicSim.v0.interaction.sequence.cpp
LabExampleSolutions/Lab2/: EnumExample.cpp  define_example.cpp
LabExampleSolutions/Lab2/A1.LogicSimPoly/: A1.LogicSimPoly.examplesolution.cpp
LabExampleSolutions/Lab2/P1.CtorDtorEtor/: CtorDtorEtor.cpp  CtorDtorEtor_pp.cpp
LabExampleSolutions/Lab2/P2.AveMunde/: AveMunde.cpp
LabExampleSolutions/Lab2/P4.MontyHall/: main.cpp  main_hint.cpp
LabExampleSolutions/Lab3/A1.LogicSimFile/: A1.LogicSimFile.examplesolution.cpp  testCircuit0.txt  testCircuit1.txt  testCircuit1n.txt
LectureExamples/10B_InheritanceInNodeLive/: ExampleSensor.cpp  HardwareEmulator.cpp  HardwareEmulator.h  ProblemStatement.txt  SensorNode.cpp  SensorNodeComplete.cpp  SensorNodeLiveCoded.cpp
LectureExamples/12B_Threading/: 00_SimpleThread.cpp  10_Detach.cpp  20_RaceConditionAtomic.cpp  30_RaceCondition.cpp  31_RaceConditionMutex.cpp  32_SimplifiedMutex.cpp  40_UnreleasedLocks.cpp  41_LockGuard.cpp  50_SimpleThreadObject.cpp  60_PassByReference.cpp  70_ConditionVar.cpp  71_ConditionVarNoSpurious.cpp  80_Pitfalls.cpp  81_Pitfalls2.cpp  90_ConsumerProducer.cpp
LectureExamples/4A_SharedPtr/: SharedPtrToClass.cpp  SimpleSharedPtr.cpp
LectureExamples/4B_Callbacks/: CBack_Dynamic.cpp  CBack_Interface.cpp  CBack_Ptr.cpp  CBack_PtrTypedef.cpp
LectureExamples/4B_EncapsulateAll/: Consts.cpp  EmbedClass.cpp  EmbedStruct.cpp  EmbedTypedef.cpp  EmbedTypedefB.cpp  FullEncapsulation_after.cpp  FullEncapsulation_before.cpp  InitVectors.cpp  StaticVars.cpp  arguments.cpp  sstream.cpp
LectureExamples/4_ContainersLive/: MyHash.cpp
LectureExamples/4_DynamicMem/: DynamicMem.cpp
LectureExamples/6A_DebugBuilds/: DebugBuilds.cpp  DebugBuilds_Simple.cpp  IncrementVariants.cpp
LectureExamples/6B_Iters_Algs/: AlgorithmLowerBound.cpp  AlgorithmSearchList.cpp  AlgorithmSearchVector.cpp  AlgorithmSortArray.cpp  AlgorithmSortBuiltinArray.cpp  AlgorithmSortList.cpp  AlgorithmSortVector.cpp  IteratorIntoMap.cpp  IteratorIntoVector.cpp  PointerAsIterator.cpp
LectureExamples/6B_TemplatingClass/: TemplatingClass.cpp  TemplatingClass.h  TemplatingClassMain.cpp
LectureExamples/7A_Async/: AsyncExample.cpp  AsyncExampleSharedFuture.cpp  AsyncExampleTwoTasks.cpp
LectureExamples/7A_Libraries_Namespaces/linking/: Makefile  main.cpp  trivial.cpp  trivial.h
LectureExamples/7A_Libraries_Namespaces/namespaces/: NamespacesA.cpp  NamespacesB.cpp
LectureExamples/7A_Libraries_Namespaces/opencv/: Makefile  show_image.cpp
LectureExamples/8B_CompareRelationships/: CompareRelationsips.cpp
LectureExamples/8B_Streams_Overloading/: BinaryFiles.cpp  FStream.cpp  FileGetLine.cpp  FileReadOrWrite.cpp  Flush.cpp  GetAndPut.cpp  IstreamIgnore.cpp  OperatorOverload.cpp  SetFormat.cpp  SetPrecision.cpp  SetW.cpp  StreamOverload.cpp  StringStream.cpp  WriteBinaryClass.cpp
LectureExamples/8B_TF2_and_Parameters/: dynamic_broadcast.cpp
LectureExamples/9B_DesignPatterns/: Factory.cpp  FactoryMotivation.cpp  InheritanceAndConstructors.cpp  Observer.cpp  Singleton.cpp
LectureExamples/ROS_LectureExamplePackage/: CMakeLists.txt  package.xml
LectureExamples/ROS_LectureExamplePackage/action/: MoveRobot.action
LectureExamples/ROS_LectureExamplePackage/config/: dynamic_reconfiguration_params.yaml
LectureExamples/ROS_LectureExamplePackage/launch/: dynamic_reconfiguration_direct_launch.py  dynamic_reconfiguration_file_launch.py  pub_sub_launch.py
LectureExamples/ROS_LectureExamplePackage/msg/: CustomMessage.msg
LectureExamples/ROS_LectureExamplePackage/src/: action_client.cpp  action_server.cpp  april_tag_detection.cpp  colour_detection.cpp  display_image.cpp  dynamic_broadcast.cpp  dynamic_reconfiguration.cpp  frame_listener.cpp  lifecycle_node.cpp  navigate.cpp  node_with_param.cpp  service_client.cpp  service_server.cpp  simple_camera_display.cpp  simple_publisher.cpp  simple_publisher_custom.cpp  simple_subscriber.cpp  simple_subscriber_custom.cpp  static_broadcast.cpp  time_traveller.cpp
TurtlebotExample/: CMakeLists.txt  package.xml
TurtlebotExample/include/turtlebot_example/: minimalNode.hpp
TurtlebotExample/src/: main.cpp  minimalNode.cpp
